# cloudflare-ddns

./: .gitignore  Cargo.toml  example.yaml  flake.nix
src/: cmd.rs  ddns.rs  ip.rs  main.rs
