[package]
name = "cloudflare-ddns"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cloudflare = "0.11.0"
reqwest = "0.12.4"
serde = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
